Merge branch 'story/NNO-12777' into 'master'